k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: referrals
  labels:
    app.kubernetes.io/part-of: referrals
